# bilibili-subtitle-downloader

./: README.md  TODOS.md  pyproject.toml
Python/: BiliBiliSubtitleDownload.py  BiliBiliSubtitleDownloadGUI.py
src/bilibili_subtitle/: __init__.py  cli.py  client.py  converter.py  gui.py
tests/: test_client.py  test_converter.py
